@@ -3784,6 +3784,7 @@ condition|;
 name|i
 operator|++
 control|)
+block|{
 name|writer
 operator|.
 name|addDocument
@@ -3791,6 +3792,7 @@ argument_list|(
 name|doc
 argument_list|)
 expr_stmt|;
+block|}
 name|writer
 operator|.
 name|flush
@@ -3831,6 +3833,140 @@ name|dir
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testFlushWithNoCommit
+specifier|public
+name|void
+name|testFlushWithNoCommit
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|flush
+argument_list|()
+expr_stmt|;
+name|DirectoryReader
+name|r
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|r
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|DirectoryReader
+name|r2
+init|=
+name|DirectoryReader
+operator|.
+name|openIfChanged
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|r2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|r2
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|r2
+argument_list|,
+name|r
+argument_list|,
+name|writer
+argument_list|,
+name|dir
+argument_list|)
 expr_stmt|;
 block|}
 comment|// Make sure we can flush segment w/ norms, then add
