@@ -92,20 +92,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|codecs
-operator|.
-name|Codec
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|document
 operator|.
 name|Field
@@ -267,13 +253,6 @@ specifier|private
 name|boolean
 name|getReaderCalled
 decl_stmt|;
-DECL|field|codec
-specifier|private
-specifier|final
-name|Codec
-name|codec
-decl_stmt|;
-comment|// sugar
 DECL|field|analyzer
 specifier|private
 specifier|final
@@ -710,16 +689,6 @@ operator|=
 literal|null
 expr_stmt|;
 block|}
-name|codec
-operator|=
-name|w
-operator|.
-name|getConfig
-argument_list|()
-operator|.
-name|getCodec
-argument_list|()
-expr_stmt|;
 if|if
 condition|(
 name|LuceneTestCase
@@ -905,14 +874,14 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-name|maybeCommit
+name|maybeFlushOrCommit
 argument_list|()
 expr_stmt|;
 block|}
-DECL|method|maybeCommit
+DECL|method|maybeFlushOrCommit
 specifier|private
 name|void
-name|maybeCommit
+name|maybeFlushOrCommit
 parameter_list|()
 throws|throws
 name|IOException
@@ -939,6 +908,41 @@ condition|)
 block|{
 if|if
 condition|(
+name|r
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|LuceneTestCase
+operator|.
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"RIW.add/updateDocument: now doing a flush at docCount="
+operator|+
+name|docCount
+argument_list|)
+expr_stmt|;
+block|}
+name|w
+operator|.
+name|flush
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+if|if
+condition|(
 name|LuceneTestCase
 operator|.
 name|VERBOSE
@@ -961,6 +965,7 @@ operator|.
 name|commit
 argument_list|()
 expr_stmt|;
+block|}
 name|flushAt
 operator|+=
 name|TestUtil
@@ -1038,7 +1043,7 @@ argument_list|(
 name|docs
 argument_list|)
 expr_stmt|;
-name|maybeCommit
+name|maybeFlushOrCommit
 argument_list|()
 expr_stmt|;
 block|}
@@ -1082,7 +1087,7 @@ argument_list|,
 name|docs
 argument_list|)
 expr_stmt|;
-name|maybeCommit
+name|maybeFlushOrCommit
 argument_list|()
 expr_stmt|;
 block|}
@@ -1235,7 +1240,7 @@ name|doc
 argument_list|)
 expr_stmt|;
 block|}
-name|maybeCommit
+name|maybeFlushOrCommit
 argument_list|()
 expr_stmt|;
 block|}
@@ -2300,6 +2305,22 @@ name|component
 argument_list|)
 return|;
 block|}
+block|}
+comment|/** Writes all in-memory segments to the {@link Directory}. */
+DECL|method|flush
+specifier|public
+specifier|final
+name|void
+name|flush
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|w
+operator|.
+name|flush
+argument_list|()
+expr_stmt|;
 block|}
 comment|/**    * Simple interface that is executed for each<tt>TP</tt> {@link InfoStream} component    * message. See also {@link RandomIndexWriter#mockIndexWriter(Random, Directory, IndexWriterConfig, TestPoint)}    */
 DECL|interface|TestPoint
